# internal/app/controllers/agents.go
@@ -14,6 +14,11 @@ type StartAgentRequest struct {
 	Task string `json:"task" binding:"required"`
 }
 
+type StartAgentResponse struct {
+	AgentID string `json:"agent_id"`
+	Message string `json:"message"`
+}
+
 type AgentRouterController struct {
 	ctx          context.Context
 	controlPlane control_plane.ControlPlane
@@ -27,13 +32,14 @@ func NewAgentRouterController(ctx context.Context, controlPlane control_plane.Co
 }
 
 // StartAgent godoc
+//
 //	@Summary		Start a new agent
 //	@Description	Starts a new agent with role and task
 //	@Tags			agents
 //	@Accept			json
 //	@Produce		json
 //	@Param			agent	body		StartAgentRequest	true	"Agent details"
-//	@Success		201		{object}	map[string]string	"Agent created successfully"
+//	@Success		201		{object}	StartAgentResponse	"Agent created successfully"
 //	@Failure		400		{object}	map[string]string	"Bad request"
 //	@Failure		500		{object}	map[string]string	"Internal server error"
 //	@Router			/api/v1/agents/create [post]
@@ -44,13 +50,17 @@ func (ac *AgentRouterController) StartAgent(c *gin.Context) {
 		return
 	}
 
-	err := ac.controlPlane.KickoffTask(ac.ctx, agent.Task, agent.Role)
+	slog.Info("Starting agent", "role", agent.Role, "task", agent.Task)
+	agentID, err := ac.controlPlane.KickoffTask(ac.ctx, agent.Task, agent.Role)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
+	slog.Info("Agent started", "agent_id", agentID)
 
-	slog.Info("Starting agent", "role", agent.Role, "task", agent.Task)
-
-	c.JSON(http.StatusCreated, gin.H{"message": "Agent created successfully"})
+	resp := StartAgentResponse{
+		AgentID: agentID,
+		Message: "Agent created successfully",
+	}
+	c.JSON(http.StatusCreated, resp)
 }
